# TermXtract

./: 404.html  _pyproject.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
code/code1/: index.html
docs/: index.md
docs/code/: code1.md  code2.md
docs/examples/: tfidf_example.md
docs/tutorials/: getting_started.md  tfidf_tutorial.md
src/termxtract/tests/: test_term_extractor.py
term_extractor/tests/: test_term_extractor.py
termxtract/: base_extractor.py  domaincoherence.py  domainpertinence.py  ldaextractor.py  rake.py  relevance.py  ridf.py  term_extractor.py  tfidf.py  utils.py  weirdness.py
termxtract/supervised/: adaboost.py  adaboostextractor.py  roger.py  term_extractor.py  tokenextractor.py
termxtract/tutorials/: tutorials.py
termxtract/unsupervised/: basic.py  combobasic.py  cvalue.py  domaincoherence.py  domainpertinence.py  ldaextractor.py  nmfextractor.py  rake.py  relevance.py  ridf.py  term_extractor.py  tfidf.py  weirdness.py
tests/: test_adaboost.py  test_basic.py  test_combobasic.py  test_cvalue.py  test_domaincoherence.py  test_domainpertinence.py  test_ldaextractor.py  test_nmf.py  test_rake.py  test_relevance.py  test_ridf.py  test_roger.py  test_tfidf.py  test_tokenextractor.py  test_weirdness.py
tutorials/getting_started/: index.html
