[tool.poetry]
name = "termxtract"
version = "0.1.0"
description = ""
authors = ["shubhanker"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
teanga = { git = "https://github.com/teangaNLP/teanga2" }
scikit-learn = "^1.3.0"
nltk = "^3.8.1"
torch = ">=1.13.0"
transformers = "^4.29.0"
sacremoses = ">=0.0.53"
numpy = "^1.24.0"
accelerate = ">=1.5.2" 

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
